--- a/runner/package.json
+++ b/runner/package.json
@@ -17,6 +17,7 @@
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-recaptcha": "^3.4.0",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
+    "random-useragent": "^0.5.0",
     "request": "^2.88.2"
   }
 }
